# ncd

./: AUTHORS  ChangeLog  Makefile.am  README  aclocal.m4  configure.ac
examples/: 1.txt  2.txt  4.txt  5.txt
results/: sim.csv
src/: Makefile.am
src/main/: CL.cc  Makefile.am  main.cc
src/main/includes/: CL.hh  NCD.hh
